// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should take a snapshot 1`] = `
<DocumentFragment>
  <fetchme />
</DocumentFragment>
`;

exports[`should take a snapshot 2`] = `
<DocumentFragment>
  <authenticatelogin />
</DocumentFragment>
`;
